test/fails/bad_functions/bad_name2.lgl
int f() { return 0; }
int f() { return 1; }

void main() {
    print f();
}
